--- a/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
+++ b/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
@@ -120,20 +120,19 @@
 }
 .crew-glyphicon-remove {
 	float: left;
-	padding-top:5px;
-	margin-left:20px;
+	padding-top: 5px;
+	margin-left: 20px;
+}
+.glyphicon-remove{
+	color:darkred;
 }
 
 .col-12 {
+	padding-top:20px;
 	clear: both;
-}
-.UnitDescription {
-	clear: both;
-	text-align:center;
-	margin-bottom:15px;
 }
 
-.info-message{
+.info-message {
 	margin: 5px auto 5px auto;
 	padding: 0 15px;
 	height:50px;
