--- a/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
+++ b/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
@@ -14,6 +14,19 @@
 	overflow: auto;
 }
 
+.nav-tabs{
+	margin-left:30px;
+}
+.tab-menu {
+	font-size: 20px;
+	margin-top: 10px;
+}
+
+.menu-button{
+	font-size:20px;
+	margin: 10px 10px 10px 0;
+}
+
 .selection-column {
 	float: left;
 	margin: 0 0 0 1px;
@@ -23,7 +36,7 @@
 .truck-selection-pane {
 	margin: 0 0 1px 0;
 	border: 2px solid #000000;
-	height:33px;
+	height:35px;
 }
 .UnitDDL {
 	margin-top: 2px;
@@ -39,17 +52,29 @@
 .crew-member-button {
 	border-radius: 2.5px;
 	border: 1px solid #000000;
+	font-size:16px;
 }
 
-.done-control-button{
-	border-radius:2.5px;
-	border:1px solid #000000;
-	float:right;
-	background-color:forestgreen;
-	color:#FFFFFF;
-	font-weight:bold;
-	margin-right:10px;
-	margin-top:2px;
+.ml-auto {
+	float: right;
+}
+
+.done-control-button {
+	border-radius: 2.5px;
+	border: 1px solid #000000;
+	background-color: forestgreen;
+	color: #FFFFFF;
+	font-size: 16px;
+	margin: 2px 10px 2px 0;
+}
+
+.cancel-crew-button {
+	border-radius: 2.5px;
+	border: 1px solid #000000;
+	background-color: #E80000;
+	color: #FFFFFF;
+	font-size: 16px;
+	margin: 2px 2px 2px 0;
 }
 
 .crew-selection-pane {
@@ -81,13 +106,10 @@
 	overflow: auto;
 }
 
-.nav .nav-tabs{
-	margin-top:15px !important;
-}
 .summary {
 	height: 5vh;
 	width: 98vw;
-	margin-left:.5px;
+	margin-left: .5px;
 	background-color: #E8E8E8;
 	border-bottom: 1px solid #000000;
 	border-left: 2px solid #000000;
@@ -137,3 +159,4 @@
 	padding: 0 15px;
 	height:50px;
 }
+
