--- a/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
+++ b/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
@@ -6,7 +6,6 @@
 
 .sites-pane {
 	border: 2px solid #000000;
-	margin: 0 1px 0 0;
 	background-color: #E8E8E8;
 	height: 84.7vh;
 	width: calc(60% - 2.5px);
@@ -14,16 +13,25 @@
 	overflow: auto;
 }
 
-.nav-tabs{
+.menu-control {
+	margin-top: 5px;
 	margin-left:30px;
 }
+.nav-tabs .nav-link:active {
+	background-color: #F5F5F5 !important;
+}
 .tab-menu {
-	font-size: 20px;
-	margin-top: 10px;
+font-size: 20px;
+margin-top: 10px;
+color: #000000;
+background-color: #F8F8F8;
 }
 
-.menu-button{
-	font-size:20px;
+.route-listview{
+	margin:0 auto;
+}
+.menu-button {
+	font-size: 20px;
 	margin: 10px 10px 10px 0;
 }
 
@@ -116,7 +124,12 @@
 	border-right: 2px solid #000000;
 	clear: both;
 }
-
+.crew-jobcard{
+	margin-left:auto;
+	margin-right:auto;
+	margin-bottom:50px;
+	clear:both;
+}
 .crew-member-box {
 	float: left;
 	margin-right: 10px;
@@ -146,7 +159,7 @@
 	margin-left: 20px;
 }
 .glyphicon-remove{
-	color:darkred;
+	color:red;
 }
 
 .col-12 {
