--- a/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
+++ b/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
@@ -1,7 +1,33 @@
-﻿.crew-content-layout {
+﻿/**************************ROUTE PAGE******************************/
+.route-status {
+	margin: 0;
+	/*height: 100vh;*/
+	width: 90vw;
+	margin-left:auto;
+	margin-right:auto;
+}
+	.route-status .table {
+		max-width: 90vw !important;
+	}
+.route-status-menu{
+	margin: 50px auto 0 auto;
+}
+
+.routesGridView {
+	
+}
+
+.tabContents {
+	border: solid 1px black;
+	padding: 15px;
+	background-color: white;
+	margin-left: auto;
+}
+/***************************CREW PAGE*******************************/
+.crew-content-layout {
 	margin: 0 10px 0 10px;
 	background-color: #FFFFFF;
-	clear:both;
+	clear: both;
 }
 
 .sites-pane {
@@ -17,8 +43,11 @@
 	margin-top: 5px;
 	margin-left:30px;
 }
+.nav-tabs .nav-link{
+	border:0.5px solid #C0C0C0;
+}
 .nav-tabs .nav-link:active {
-	background-color: #F5F5F5 !important;
+	background-color: #FFFFFF!important;
 }
 .tab-menu {
 font-size: 20px;
@@ -26,10 +55,20 @@ margin-top: 10px;
 color: #000000;
 background-color: #F8F8F8;
 }
-
-.route-listview{
-	margin:0 auto;
+.site-listview {
+	/*width:initial;*/
+	margin-right:auto;
+	margin-left:auto;
 }
+.routes{
+	/*margin: 0 auto 15px auto;*/
+	background-color:#FFFFFF;
+}
+
+.table .table-striped .table-bordered {
+	background-color: #FFFFFF !important;
+}
+
 .menu-button {
 	font-size: 20px;
 	margin: 10px 10px 10px 0;
@@ -128,6 +167,7 @@ background-color: #F8F8F8;
 	margin-left:auto;
 	margin-right:auto;
 	margin-bottom:50px;
+	margin-top:10px;
 	clear:both;
 }
 .crew-member-box {
