--- a/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
+++ b/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
@@ -1,16 +1,42 @@
 ﻿/**************************ROUTE PAGE******************************/
+.search-criteria input {
+	border: 1px solid black;
+	padding:0 0 0 5px;
+}
+.search-area {
+	display: flex;
+	flex-direction: row;
+	border: 1.5px solid black;
+	justify-content: space-evenly;
+	height:2.5rem;
+}
+.search-label {
+	font-size: 1.4rem;
+	font-weight: 500;
+	margin: auto;
+}
+.search-category, .search-criteria, .task-option,
+.season-ddl, .go-clear-search, .clear-search {
+	margin: auto;
+}
+
+.search-box {
+	display: flex;
+	grid-gap: 20px;
+	padding: 0;
+	grid-template-columns: repeat(auto-fit, minmax(100px, 200px));
+}
 .route-status {
 	margin: 0;
-	/*height: 100vh;*/
 	width: 90vw;
-	margin-left:auto;
-	margin-right:auto;
+	margin-left: auto;
+	margin-right: auto;
 }
-	.route-status .table {
-		max-width: 90vw !important;
-	}
+.route-status .table {
+	max-width: 90vw !important;
+}
 .route-status-menu{
-	margin: 50px auto 0 auto;
+	margin: 20px auto 0 auto;
 }
 
 .routesGridView {
