--- a/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
+++ b/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
@@ -142,7 +142,7 @@
 	background-color: var(--paneColor);
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows:1fr auto;
+	grid-template-rows:4em auto;
 	grid-column-gap:5px;
 	padding:15px;
 	overflow:auto;
@@ -199,7 +199,7 @@
 	}
 	/**/ .jobcard-routes > h3 {
 		text-align: center;
-		margin: 10px 0;
+		margin: 30px 0;
 	}
 /**/ .jobsite-lv {
 		background-color: #FFFFFF;
@@ -211,7 +211,7 @@
 /**/.close-jobcards {
 		background-color: #FFFFFF;
 		width: 95%;
-		margin: 10px auto;
+		margin: 20px auto;
 	}
 /******************END JOBCARDS AND ROUTES********************/
 .summary {
