--- a/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
+++ b/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
@@ -193,27 +193,31 @@
 		font-size:var(--fontSize);
 		border-bottom:1px solid var(--borderColor);
 	}
-	.nav-tab{
+	.tab-menu{
+		display:block;
 		border:1px solid var(--borderColor);
 		border-top-left-radius:5px;
 		border-top-right-radius:5px;
 		background-color:var(--tabDefault);
 		border-bottom:0;
+		padding:10px 20px 10px 10px;
+		color: black;
+		
 	}
-.activeTab {
-	background-color: darkred;
-}
 	.menu-control > ul{
 		list-style:none;
 		display:inline-flex;
 	}
+.activeTab {
+	background-color: darkred;
+}
 	/**/ .jobcard-routes > h3 {
 		text-align: center;
 		margin: 20px 0;
 	}
 /**/ .jobsite-lv {
 		background-color: #FFFFFF;
-		margin: 0 auto 10px auto;
+		margin:0 auto 10px auto;
 		}
 /**//**/.btn-finish{
 			float:right;
@@ -223,9 +227,15 @@
 		width: 95%;
 		margin: 20px auto;
 	}
+.resize-textbox-multiline {
+	min-height: 1.9em;
+	width:24vw;
+	padding-left:10px;
+}
 
-.jobCardTextBox {
-	Width: 5vw;
+.resize-textbox {
+	Width: 6vw;
+	padding-left:10px;
 }
 /******************END JOBCARDS AND ROUTES********************/
 .summary {
@@ -234,188 +244,17 @@
 	border-left: 2px solid var(--borderColor);
 	border-right: 2px solid var(--borderColor);
 	background-color: var(--paneColor);
+	/*justify-content: center;
+	grid-column: 1/-1;*/
 }
-/*.crew-content-layout {
-	margin: 0 10px 0 10px;
-	background-color: #FFFFFF;
-	clear: both;
+.summaryElements {
+	padding-left:15px;
+	display: inline-grid;
+	grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+	/*grid-template-areas: "su su su su su su su su";*/
+	grid-column-gap: 10px;
 }
+.summaryElements > div{
+	grid-column: 1;
 
-.sites-pane {
-	border: 2px solid #000000;
-	background-color: #E8E8E8;
-	height: 84.7vh;
-	width: calc(60% - 2.5px);
-	float: right;
-	overflow: auto;
 }
-
-.menu-control {
-	margin-top: 5px;
-	margin-left:30px;
-}
-.nav-tabs .nav-link{
-	border:0.5px solid #C0C0C0;
-}
-.nav-tabs .nav-link:active {
-	background-color: #FFFFFF!important;
-}
-.tab-menu {
-font-size: 20px;
-margin-top: 10px;
-color: #000000;
-background-color: #F8F8F8;
-}
-.site-listview {*/
-	/*width:initial;*/
-	/*margin-right:auto;
-	margin-left:auto;
-}
-.routes{*/
-	/*margin: 0 auto 15px auto;*/
-	/*background-color:#FFFFFF;
-}
-
-.table .table-striped .table-bordered {
-	background-color: #FFFFFF !important;
-}
-
-.menu-button {
-	font-size: 20px;
-	margin: 10px 10px 10px 0;
-}
-
-.selection-column {
-	float: left;
-	margin: 0 0 0 1px;
-	width: calc(40% - 2.5px);
-}
-
-.truck-selection-pane {
-	margin: 0 0 1px 0;
-	border: 2px solid #000000;
-	height:35px;
-}
-.UnitDDL {
-	margin-top: 2px;
-	border-radius:5px;
-	border: 1px solid #000000;
-}
-
-.fleet-category-selection {
-	float: left;
-	padding-left: 10px;
-}
-
-.crew-member-button {
-	border-radius: 2.5px;
-	border: 1px solid #000000;
-	font-size:16px;
-}
-
-.ml-auto {
-	float: right;
-}
-
-.done-control-button {
-	border-radius: 2.5px;
-	border: 1px solid #000000;
-	background-color: forestgreen;
-	color: #FFFFFF;
-	font-size: 16px;
-	margin: 2px 10px 2px 0;
-}
-
-.cancel-crew-button {
-	border-radius: 2.5px;
-	border: 1px solid #000000;
-	background-color: #E80000;
-	color: #FFFFFF;
-	font-size: 16px;
-	margin: 2px 2px 2px 0;
-}
-
-.crew-selection-pane {
-	height: 32vh;
-	border: 2px solid #000000;
-	margin-bottom: 3.5px;
-	background-color: #E8E8E8;
-	text-align: center;
-	overflow: auto;
-	clear: both;
-}
-
-.selectDriver{
-	margin:5px;
-}
-.Cssgrid {
-	background-color: #FFFFFF;
-}
-
-.align-cell-left {
-	text-align: left;
-}
-
-.current-crew-pane {
-	height: 48.6vh;
-	background-color: #E8E8E8;
-	border: 2px solid #000000;
-	margin-top: 3.5px;
-	overflow: auto;
-}
-
-.summary {
-	height: 5vh;
-	width: 98vw;
-	margin-left: .5px;
-	background-color: #E8E8E8;
-	border-bottom: 1px solid #000000;
-	border-left: 2px solid #000000;
-	border-right: 2px solid #000000;
-	clear: both;
-}
-.crew-jobcard{
-	margin-left:auto;
-	margin-right:auto;
-	margin-bottom:50px;
-	margin-top:10px;
-	clear:both;
-}
-.crew-member-box {
-	float: left;
-	margin-right: 10px;
-}
-.job-card-box{
-	float:left;
-}
-
-.current-crew-box {
-	margin: 20px 5px 20px 5px;
-	align-content:center;
-	clear: both;
-}
-
-.current-crew-header{
-	text-align:center;
-	clear:both;
-}
-
-.crew-header{
-	float:left;
-	align-content:center;
-}
-.crew-glyphicon-remove {
-	float: left;
-	padding-top: 5px;
-	margin-left: 20px;
-}
-.glyphicon-remove{
-	color:red;
-}
-
-.col-12 {
-	padding-top:20px;
-	clear: both;
-}*/
-
-
