--- a/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
+++ b/Marigold/Marigold/CSS_Files/City_Operations/Parks/crewLeader.css
@@ -19,10 +19,10 @@
 }
 
 	/**************************ROUTE PAGE******************************/
-	.search-criteria input {
-		border: 1px solid black;
-		padding: 0 0 0 5px;
-	}
+.search-criteria input {
+	border: 1px solid black;
+	padding: 0 0 0 5px;
+}
 .search-area {
 	display: flex;
 	flex-direction: row;
@@ -46,22 +46,34 @@
 	padding: 0;
 	grid-template-columns: repeat(auto-fit, minmax(100px, 200px));
 }
+.routes-wrapper{
+	display:grid;
+	grid-template-columns:repeat(12, 1fr);
+	grid-template-areas:
+		"m m r r r r r r r r r r";
+	grid-gap:5px;
+
+}
+.routes-menu{
+	grid-area:m;
+	background-color:#E8E8E8;
+}
+
+.routes-area{
+}
 .route-status {
-	margin: 0;
+	margin: 0 auto;
 	width: 90vw;
-	margin-left: auto;
-	margin-right: auto;
 }
-.route-status .table {
-	max-width: 90vw !important;
+.routes {
+	grid-area: r;
+	margin-top:50px;
 }
+
 .route-status-menu{
 	margin: 20px auto 0 auto;
 }
 
-.routesGridView {
-	
-}
 
 .tabContents {
 	border: solid 1px black;
@@ -72,10 +84,10 @@
 /***************************CREW PAGE*******************************/
 :root{
 	--paneColor: #E8E8E8;
-	--tabSelected:#F2F2F2;
+	--tabSelectedColor:#F2F2F2;
 	--borderColor: #000000;
 	--fontSize:1.1em;
-	--tabDefault:4B4B4B;
+	--tabDefaultColor:#708090;
 }
 .crew-wrapper {
 	display: grid;
@@ -176,7 +188,9 @@
 		margin-bottom:10px;
 	}
 /******************END CURRENT CREWS**********************/
+
 /******************JOBCARDS AND ROUTES********************/
+
 .jobcard-routes {
 	grid-area: r;
 	border: 2px solid var(--borderColor);
@@ -189,27 +203,35 @@
 	}
 	.menu-control{
 		display:block;
-		padding:10px 0 0 50px;
+		padding:10px 0 8px 50px;
 		font-size:var(--fontSize);
-		border-bottom:1px solid var(--borderColor);
+		border-bottom:1px solid var(--borderColor); 
 	}
-	.tab-menu{
-		display:block;
-		border:1px solid var(--borderColor);
-		border-top-left-radius:5px;
-		border-top-right-radius:5px;
-		background-color:var(--tabDefault);
-		border-bottom:0;
-		padding:10px 20px 10px 10px;
+.default-tab {
+	border: 1px solid var(--borderColor);
+	border-bottom: none;
+	border-radius: 5px 5px 0 0;
+	font-size: 1.3em;
+	padding: 5px 10px 10px 10px;
+	color: black;
+	background-color: var(--tabDefaultColor);
+}
+	.default-tab:hover, .active-tab:hover {
 		color: black;
-		
+		text-decoration: none;
 	}
-	.menu-control > ul{
-		list-style:none;
-		display:inline-flex;
-	}
-.activeTab {
-	background-color: darkred;
+.menu-control > ul {
+	list-style: none;
+	display: inline-flex;
+}
+.active-tab {
+	border: 1px solid var(--borderColor);
+	border-bottom: none;
+	border-radius: 5px 5px 0 0;
+	font-size: 1.3em;
+	padding: 10px 10px 12px 10px;
+	color: black;
+	background-color: var(--tabSelectedColor);
 }
 	/**/ .jobcard-routes > h3 {
 		text-align: center;
@@ -218,6 +240,8 @@
 /**/ .jobsite-lv {
 		background-color: #FFFFFF;
 		margin:0 auto 10px auto;
+		width:100%;
+		overflow:auto;
 		}
 /**//**/.btn-finish{
 			float:right;
